--- a/22_03_25-My Site/css/styles.css
+++ b/22_03_25-My Site/css/styles.css
@@ -1,5 +1,13 @@
 /*
 //**_______________________________________________________________________________________________________________________________________________*/
 body{
-    background-color: blue;
+    margin: 0;
+}
+
+h1{
+    margin-top: 0;
+}
+
+div{
+    background-color: #E0EBE8;
 }
