--- a/22_03_25-My Site/css/styles.css
+++ b/22_03_25-My Site/css/styles.css
@@ -8,6 +8,29 @@ h1{
     margin-top: 0;
 }
 
-div{
+.top-container{
     background-color: #E0EBE8;
+    border-style: solid;
+    border-width: 10px;
+    height: 200px;
+    padding: 20px;
+    width: 200px;
+}
+
+.middle-container{
+    background-color: red;
+    margin-left: 17%;
+    border-style: solid;
+    border-width: 20px;
+    height: 200px;
+    width: 200px;
+}
+
+.bottom-container{
+    background-color: gold;
+    margin-left: 32.7%;
+    border-style: solid;
+    border-width: 10px;
+    height: 200px;
+    width: 200px;
 }
