--- a/22_03_25-My Site/css/styles.css
+++ b/22_03_25-My Site/css/styles.css
@@ -1,7 +1,7 @@
 /*
 //**_______________________________________________________________________________________________________________________________________________*/
 /* body{
-    margin: 0;
+    margin: 0; /* Recuerda siempre mantenerlo en 0 *
 }
 
 h1{
@@ -13,30 +13,28 @@ h1{
 } */
 
 .top-container-1{
-    display: inline-block;
     background-color: red;
-    height: 200px;
-    width: 200px;
-    position: relative;
-    left: 380px;
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    top: 209px;
+    left: 209px;
 }
 
 .middle-container{
-    display: inline-block;
     background-color: blue;
-    height: 200px;
-    width: 200px;
-    position: relative;
-    right: 210px;
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    left: 108px;
+    top: 108px;
 }
 
 .bottom-container{
-    display: inline-block;
     background-color: yellow;
-    height: 200px;
-    width: 200px;
-    position: relative;
-    right: 220px;
+    height: 100px;
+    width: 100px;
+    position: absolute;
 }
 
 .pro{
