--- a/22_03_25-My Site/css/styles.css
+++ b/22_03_25-My Site/css/styles.css
@@ -1,53 +1,49 @@
 /*
 //**_______________________________________________________________________________________________________________________________________________*/
-/* 
+/* position: fixed; Con este se mantiene estatico el elemento */
+
 body{
-    margin: 0; /* Recuerda siempre mantenerlo en 0 *
+    margin: 0; /* Recuerda siempre mantenerlo en 0 */
+    text-align: center; /* Centramos texto */
 }
 
 h1{
     margin-top: 0;
+    /* width: 10%; /* Al hacer esto, es lo que mide a lo ancho y se queda lado izquiero */
+    /* margin: 0 auto 0 auto; /* Con esto lo vuelvo a centrar aunque haya definido width - (Top-Right-Bottom-Left) */
 }
 
-.top-container{
+.top-container{ /* Recuerda, las clases con CSS ocupan puntos, id con # */
     background-color: #E0EBE8;
-} */
-
-.container{
     position: relative;
-    background-color: gray;
-    height: 300px;
-    width: 302px;
-}
-
-.top-container-1{
-    background-color: red;
-    height: 100px;
-    width: 100px;
-    position: absolute;
-    top: 0px;
-    left: 202px;
+    padding-top: 100px;
 }
 
 .middle-container{
-    background-color: blue;
-    height: 100px;
-    width: 100px;
-    position: absolute;
-    left: 108px;
-    top: 8px;
+    background-color: red;
+    height: 200px;
+    width: 200px;
 }
 
 .bottom-container{
-    background-color: yellow;
-    height: 100px;
-    width: 100px;
-    position: absolute;
-    /* position: fixed; Con este se mantiene estatico el elemento */
-    top: 8px;
-
+    background-color: blue;
+    height: 200px;
+    width: 200px;
 }
 
 .pro{
     text-decoration: underline;
+}
+
+.top-cloud{
+    /* margin: 30px 0px 0px 400px; /* Acomode la nube superior - (Asi realice el ejercicio) */
+    position: absolute;
+    right: 300px;
+    top: 50px;
+}
+
+.bottom-cloud{
+    position: absolute; /* Subi la nube hasta donde inicia la etiqueta */
+    left: 300px;
+    bottom: 300px;
 }
