--- a/22_03_25-My Site/css/styles.css
+++ b/22_03_25-My Site/css/styles.css
@@ -12,10 +12,11 @@
 } */
 
 body{
-    margin: 0; /* Recuerda siempre mantenerlo en 0 */
-    text-align: center; /* Centramos texto */
+    color: #40514E;
     /* font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; */
     font-family: 'Merriweather', serif;
+    margin: 0; /* Recuerda siempre mantenerlo en 0 */
+    text-align: center; /* Centramos texto */
 }
 
 h1{
@@ -34,6 +35,7 @@ h2{
     font-family: 'Montserrat', sans-serif;
     font-size: 2.5rem;
     font-weight: normal;
+    padding-bottom: 10px;
 }
 
 h3{
@@ -41,14 +43,34 @@ h3{
     font-family: 'Montserrat', sans-serif;
 }
 
+p {
+    line-height: 2;
+}
+  
+hr {
+    border-style: none;
+    border-top-style: dotted;
+    border-color: gray;
+    border-width: 5px;
+    margin: 100px auto;
+    width: 4%;
+}
+
 a{
     color: #11999E;
+    font-family: 'Montserrat', sans-serif;
+    margin: 10px 20px;
+    text-decoration: none;
+}
+
+a:hover{
+    color: #EAF6F6;
 }
 
 .top-container{ /* Recuerda, las clases con CSS ocupan puntos, id con # */
     background-color: #E4F9F5;
-    position: relative;
     padding-top: 100px;
+    position: relative;
 }
 
 /* #profile_img{
@@ -56,20 +78,38 @@ a{
 } */
 
 .middle-container{
+    margin: 100px 0;
 }
 
 .bottom-container{
+    background-color: #66BFBF;
+    padding: 50px 0 20px;
 }
 
 .skill-row{
     margin: 100px auto 100px auto; /* Con esto lo vuelvo a centrar aunque haya definido width - (Top-Right-Bottom-Left) */
     text-align: left;
     width: 50%;
-    line-height: 2;
 }
 
 .pro{
     text-decoration: underline;
+}
+
+.intro{
+    margin: auto;
+    width: 30%;
+}
+
+.contact-message{
+    margin: 40px auto 60px;
+    width: 40%;
+}
+
+.copyright{
+    color: #EAF6F6;
+    font-size: .75rem;
+    padding: 20px 0;
 }
 
 .top-cloud{
@@ -80,21 +120,21 @@ a{
 }
 
 .bottom-cloud{
-    position: absolute; /* Subi la nube hasta donde inicia la etiqueta */
-    left: 250px;
     bottom: 300px;
+    left: 150px;
+    position: absolute; /* Subi la nube hasta donde inicia la etiqueta */
 }
 
 .code-img {
-    width: 25%;
     float: left;
     margin-right: 30px;
+    width: 25%;
 }
 
 .chilli-img {
-    width: 25%;
     float: right;
     margin-left: 30px;
+    width: 25%;
 }
 
 .btn {
@@ -107,14 +147,14 @@ a{
     -webkit-border-radius: 8;
     -moz-border-radius: 8;
     border-radius: 8px;
-    font-family: Arial;
+    font-family: 'Montserrat', sans-serif;
     color: #ffffff;
     font-size: 20px;
     padding: 10px 20px 10px 20px;
     text-decoration: none;
-  }
+}
   
-  .btn:hover {
+.btn:hover {
     background: #30e3cb;
     background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
     background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
@@ -122,4 +162,4 @@ a{
     background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
     background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
     text-decoration: none;
-  }
+}
