--- a/22_04_01-Bootstrap Instalation/css/styles.css
+++ b/22_04_01-Bootstrap Instalation/css/styles.css
@@ -1,8 +1,13 @@
 /* 
 //**_______________________________________________________________________________________________________________________________________________*/
+body{
+    font-family: 'Montserrat-Black', sans-serif;
+}
 
 #title{
     background-color: #FF4C68;
+    color: #FFF;
+    font-size: 1.3rem;
 }
 
 .container-fluid{
@@ -11,6 +16,37 @@
 
 h1{
     font-family: 'Montserrat-Black', sans-serif;
-    font-size: 3rem;
+    font-size: 4rem;
+    font-weight: 900;
     line-height: 1.5;
+}
+
+.navbar{
+    padding: 0 0 4.5rem;
+}
+
+.navbar-brand{
+    font-family: "Ubuntu";
+    font-size: 2.5rem;
+    font-weight: bold;
+    padding-left: 2rem;
+}
+
+.nav-item{
+    padding: 0 18px;
+}
+
+.nav-link{
+    font-size: 1.3rem;
+    font-family: "Montserrat";
+}
+
+.download-button{
+    margin: 5% 7% 5% 0;
+    width: 12rem;;
+}
+
+.title-image{
+    width: 60%;
+    transform: rotate(25deg);
 }
