--- a/22_04_01-Bootstrap Instalation/css/styles.css
+++ b/22_04_01-Bootstrap Instalation/css/styles.css
@@ -12,6 +12,7 @@ body{
 
 .container-fluid{
     padding: 3% 15%;
+    /* height: 43rem; */
 }
 
 h1{
@@ -19,6 +20,15 @@ h1{
     font-size: 4rem;
     font-weight: 900;
     line-height: 1.5;
+}
+
+h3{
+    font-family: "Montserrat-Black";
+    font-weight: bolder;
+}
+
+p{
+    color: #8F8F8F;
 }
 
 .navbar{
@@ -49,4 +59,22 @@ h1{
 .title-image{
     width: 60%;
     transform: rotate(25deg);
+}
+
+#features{
+    padding: 7% 15%;
+}
+
+.feature-box{
+    text-align: center;
+    padding: 5%;
+}
+
+.icon{
+    color: #EF8172;
+    margin-bottom: 1rem;
+}
+
+.icon:hover{
+    color: #FF4C68;
 }
