--- a/22_04_01-Bootstrap Instalation/css/styles.css
+++ b/22_04_01-Bootstrap Instalation/css/styles.css
@@ -1,111 +1,176 @@
 /* 
 //**_______________________________________________________________________________________________________________________________________________*/
-body{
-    font-family: 'Montserrat-Black', sans-serif;
+body {
+  font-family: "Montserrat";
+  text-align: center;
 }
 
-#title{
-    background-color: #FF4C68;
-    color: #FFF;
-    font-size: 1.3rem;
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Montserrat-Bold";
 }
 
-.container-fluid{
-    padding: 3% 15%;
-    /* height: 43rem; */
+p {
+  color: #8f8f8f;
 }
 
-h1{
-    font-family: 'Montserrat-Black';
-    font-size: 4rem;
-    font-weight: 900;
-    line-height: 1.5;
+/* Headings */
+.big-heading {
+  font-family: "Montserrat-Black";
+  font-size: 3.5rem;
+  line-height: 1.5;
 }
 
-h2{
-    font-family: "Montserrat-Bold";
-    font-size: 4rem;
-    font-weight: bold;
-    line-height: 1.5;
+.section-heading {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
-h3{
-    font-family: "Montserrat-Black";
-    font-weight: bolder;
+/* Containers */
+.container-fluid {
+  padding: 3% 15% 7%;
 }
 
-p{
-    color: #8F8F8F;
+/* Sections */
+.colored-section {
+  background-color: #ff4c68;
+  color: #fff;
 }
 
-.navbar{
-    padding: 0 0 4.5rem;
+.white-section {
+  background-color: #fff;
 }
 
-.navbar-brand{
-    font-family: "Ubuntu";
-    font-size: 2.5rem;
-    font-weight: bold;
-    padding-left: 2rem;
+/* Navigation Bar */
+.navbar {
+  padding: 0 0 4.5rem;
 }
 
-.nav-item{
-    padding: 0 18px;
+.navbar-brand {
+  font-family: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
 }
 
-.nav-link{
-    font-size: 1.3rem;
-    font-family: "Montserrat";
+.nav-item {
+  padding: 0 18px;
 }
 
-.download-button{
-    margin: 5% 7% 5% 0;
-    width: 12rem;;
+.nav-link {
+  font-size: 1.2rem;
+  font-family: "Montserrat-Light";
 }
 
-.title-image{
-    width: 60%;
-    transform: rotate(25deg);
+/* Buttons */
+.download-button {
+  margin: 5% 3% 5% 0;
 }
 
-#features{
-    padding: 7% 15%;
+/* Title Section */
+
+#title {
+  background-color: #ff4c68;
+  color: #fff;
+  text-align: left;
 }
 
-.feature-box{
+/* Title Image */
+.title-image {
+  width: 60%;
+  transform: rotate(25deg);
+  position: absolute;
+  right: 15%;
+}
+
+/* with space parent child hierarchical selectors read right to left */
+
+/* no space read left to right with no hierarchy and no parent/child relationship */
+
+#title .container-fluid {
+  padding: 3% 14% 7%;
+}
+
+/* Features Section */
+#features {
+  position: relative;
+  background-color: #fff;
+  z-index: 1;
+}
+
+.feature-title {
+  font-size: 1.5rem;
+}
+
+.feature-box {
+  padding: 4.5%;
+}
+
+.icon {
+  color: #ef8172;
+  margin-bottom: 1rem;
+}
+
+.icon:hover {
+  color: #ff4c68;
+}
+
+/* Testimonial Section */
+#testimonials {
+  background-color: #ef8172;
+  text-align: center;
+}
+
+.testimonial-text {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+.testimonial-image {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+#press {
+  background-color: #ef8172;
+  padding-bottom: 3%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
+}
+
+/* Pricing Section */
+#pricing {
+  padding: 100px;
+  text-align: center;
+}
+
+.price-text {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+.pricing-column {
+  padding: 3% 2%;
+}
+
+/* CTA Section */
+/* Footer Section */
+.social-icon {
+  margin: 20px 10px;
+}
+
+/* @media <type> <feature> */
+
+@media only screen and (max-width: 1028px) {
+  #title {
     text-align: center;
-    padding: 5%;
-}
+  }
 
-.icon{
-    color: #EF8172;
-    margin-bottom: 1rem;
-}
 
-.icon:hover{
-    color: #FF4C68;
-}
-
-#testimonials{
-    color: #FFF;
-    background-color: #EF8172;
-    padding: 7% 15%;
-    text-align: center;
-}
-
-.testimonial-image{
-    width: 10%;
-    border-radius: 100%;
-    margin: 20px;
-}
-
-#press{
-    background-color: #EF8172;
-    text-align: center;
-    padding-bottom: 3%;
-}
-
-.press-logo{
-    width: 15%;
-    margin: 20px 20px 50px;
+  .title-image {
+    position: static;
+    transform: rotate(0deg);
+  }
 }
