--- a/22_04_01-Bootstrap Instalation/css/styles.css
+++ b/22_04_01-Bootstrap Instalation/css/styles.css
@@ -1,176 +1,115 @@
 /* 
 //**_______________________________________________________________________________________________________________________________________________*/
-body {
-  font-family: "Montserrat";
-  text-align: center;
+body{
+    font-family: 'Montserrat-Black', sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Montserrat-Bold";
+#title{
+    background-color: #FF4C68;
+    color: #FFF;
+    font-size: 1.3rem;
 }
 
-p {
-  color: #8f8f8f;
+.container-fluid{
+    padding: 3% 15%;
+    /* height: 43rem; */
 }
 
-/* Headings */
-.big-heading {
-  font-family: "Montserrat-Black";
-  font-size: 3.5rem;
-  line-height: 1.5;
+h1{
+    font-family: 'Montserrat-Black';
+    font-size: 4rem;
+    font-weight: 900;
+    line-height: 1.5;
 }
 
-.section-heading {
-  font-size: 3rem;
-  line-height: 1.5;
+h2{
+    font-family: "Montserrat-Bold";
+    font-size: 4rem;
+    font-weight: bold;
+    line-height: 1.5;
 }
 
-/* Containers */
-.container-fluid {
-  padding: 3% 15% 7%;
+h3{
+    font-family: "Montserrat-Black";
+    font-weight: bolder;
 }
 
-/* Sections */
-.colored-section {
-  background-color: #ff4c68;
-  color: #fff;
+.navbar-brand:hover{
+    text-decoration: underline
 }
 
-.white-section {
-  background-color: #fff;
+p{
+    color: #8F8F8F;
 }
 
-/* Navigation Bar */
-.navbar {
-  padding: 0 0 4.5rem;
+.navbar{
+    padding: 0 0 4.5rem;
 }
 
-.navbar-brand {
-  font-family: "Ubuntu";
-  font-size: 2.5rem;
-  font-weight: bold;
+.navbar-brand{
+    font-family: "Ubuntu";
+    font-size: 2.5rem;
+    font-weight: bold;
+    padding-left: 2rem;
 }
 
-.nav-item {
-  padding: 0 18px;
+.nav-item{
+    padding: 0 18px;
 }
 
-.nav-link {
-  font-size: 1.2rem;
-  font-family: "Montserrat-Light";
+.nav-link{
+    font-size: 1.3rem;
+    font-family: "Montserrat";
 }
 
-/* Buttons */
-.download-button {
-  margin: 5% 3% 5% 0;
+.download-button{
+    margin: 5% 7% 5% 0;
+    width: 12rem;;
 }
 
-/* Title Section */
-
-#title {
-  background-color: #ff4c68;
-  color: #fff;
-  text-align: left;
+.title-image{
+    width: 60%;
+    transform: rotate(25deg);
 }
 
-/* Title Image */
-.title-image {
-  width: 60%;
-  transform: rotate(25deg);
-  position: absolute;
-  right: 15%;
+#features{
+    padding: 7% 15%;
 }
 
-/* with space parent child hierarchical selectors read right to left */
-
-/* no space read left to right with no hierarchy and no parent/child relationship */
-
-#title .container-fluid {
-  padding: 3% 14% 7%;
-}
-
-/* Features Section */
-#features {
-  position: relative;
-  background-color: #fff;
-  z-index: 1;
-}
-
-.feature-title {
-  font-size: 1.5rem;
-}
-
-.feature-box {
-  padding: 4.5%;
-}
-
-.icon {
-  color: #ef8172;
-  margin-bottom: 1rem;
-}
-
-.icon:hover {
-  color: #ff4c68;
-}
-
-/* Testimonial Section */
-#testimonials {
-  background-color: #ef8172;
-  text-align: center;
-}
-
-.testimonial-text {
-  font-size: 3rem;
-  line-height: 1.5;
-}
-
-.testimonial-image {
-  width: 10%;
-  border-radius: 100%;
-  margin: 20px;
-}
-
-#press {
-  background-color: #ef8172;
-  padding-bottom: 3%;
-}
-
-.press-logo {
-  width: 15%;
-  margin: 20px 20px 50px;
-}
-
-/* Pricing Section */
-#pricing {
-  padding: 100px;
-  text-align: center;
-}
-
-.price-text {
-  font-size: 3rem;
-  line-height: 1.5;
-}
-
-.pricing-column {
-  padding: 3% 2%;
-}
-
-/* CTA Section */
-/* Footer Section */
-.social-icon {
-  margin: 20px 10px;
-}
-
-/* @media <type> <feature> */
-
-@media only screen and (max-width: 1028px) {
-  #title {
+.feature-box{
     text-align: center;
-  }
+    padding: 5%;
+}
 
+.icon{
+    color: #EF8172;
+    margin-bottom: 1rem;
+}
 
-  .title-image {
-    position: static;
-    transform: rotate(0deg);
-  }
+.icon:hover{
+    color: #FF4C68;
+}
+
+#testimonials{
+    color: #FFF;
+    background-color: #EF8172;
+    padding: 7% 15%;
+    text-align: center;
+}
+
+.testimonial-image{
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+#press{
+    background-color: #EF8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+.press-logo{
+    width: 15%;
+    margin: 20px 20px 50px;
 }
