--- a/22_04_01-Bootstrap Instalation/css/styles.css
+++ b/22_04_01-Bootstrap Instalation/css/styles.css
@@ -93,7 +93,6 @@ p{
 #testimonials{
     color: #FFF;
     background-color: #EF8172;
-    padding: 7% 15%;
     text-align: center;
 }
 
@@ -101,6 +100,10 @@ p{
     width: 10%;
     border-radius: 100%;
     margin: 20px;
+}
+
+.carousel-item{
+    padding: 7% 15%;
 }
 
 #press{
