--- a/22_04_01-Bootstrap Instalation/css/styles.css
+++ b/22_04_01-Bootstrap Instalation/css/styles.css
@@ -116,3 +116,16 @@ p{
     width: 15%;
     margin: 20px 20px 50px;
 }
+
+.card{
+    min-height: 26rem;
+}
+
+#pricing{
+    padding: 100px;
+    text-align: center;
+}
+
+.pricing-column{
+    padding: 3% 2%;
+}
