--- a/22_04_01-Bootstrap Instalation/css/styles.css
+++ b/22_04_01-Bootstrap Instalation/css/styles.css
@@ -11,8 +11,7 @@ body{
 }
 
 .container-fluid{
-    padding: 3% 15%;
-    /* height: 43rem; */
+    padding: 3% 15% 7%;
 }
 
 h1{
@@ -68,12 +67,16 @@ p{
 }
 
 .title-image{
-    width: 60%;
+    position: absolute;
+    right: 30%;
     transform: rotate(25deg);
+    width: 60%;
 }
 
 #features{
+    background-color: #FFF;
     padding: 7% 15%;
+    position: relative;
 }
 
 .feature-box{
