--- a/22_04_01-Bootstrap Instalation/css/styles.css
+++ b/22_04_01-Bootstrap Instalation/css/styles.css
@@ -102,11 +102,11 @@ p{
 .testimonial-image{
     width: 10%;
     border-radius: 100%;
-    margin: 20px;
+    margin: 20px auto;
 }
 
 .carousel-item{
-    padding: 7% 15%;
+    padding: 7% 10%;
 }
 
 #press{
@@ -143,4 +143,32 @@ p{
         position: static;
         transform: rotate(0);
     }
+}
+
+#cta{
+    background-color: #FF4C68;
+    color: #FFF;
+    text-align: center;
+    padding: 6%;
+}
+
+#cta-h3{
+    font-size: 4rem;
+    margin: auto;
+    width: 70%;
+}
+
+.cta-btn{
+    margin: 3% 2% 0 0;
+}
+
+#footer{
+    background-color: #FFF;
+    text-align: center;
+    padding: 2% 0 0 0;
+}
+
+.fa-footer{
+    margin-bottom: 1%;
+    margin-right: .5%;
 }
