--- a/22_04_01-Bootstrap Instalation/css/styles.css
+++ b/22_04_01-Bootstrap Instalation/css/styles.css
@@ -1,5 +1,6 @@
 /* 
 //**_______________________________________________________________________________________________________________________________________________*/
+/* Refactoring Code that's mean to put the customize Css attribute in the same space and do not repit it */
 body{
     font-family: 'Montserrat-Black', sans-serif;
 }
