--- a/22_04_26-DOM/styles.css
+++ b/22_04_26-DOM/styles.css
@@ -1,3 +1,5 @@
+/* 
+//**_______________________________________________________________________________________________________________________________________________*/
 h1{
     color: red;
 }
