--- a/22_04_26-DOM/styles.css
+++ b/22_04_26-DOM/styles.css
@@ -1,5 +1,5 @@
 /* 
 //**_______________________________________________________________________________________________________________________________________________*/
-h1{
+/* h1{
     color: red;
-}
+} */
