--- a/Drum Kit Starting Files/styles.css
+++ b/Drum Kit Starting Files/styles.css
@@ -1,3 +1,5 @@
+/*
+//**_______________________________________________________________________________________________________________________________________________*/
 body {
   text-align: center;
   background-color: #283149;
