--- a/j22_05_12-Query/styles.css
+++ b/j22_05_12-Query/styles.css
@@ -1,5 +1,15 @@
 /*
 //**_______________________________________________________________________________________________________________________________________________*/
-body{
+/* body{
     background-color: wheat;
+} */
+
+.big-title {
+    font-size: 10rem;
+    color: yellow;
+    font-family: cursive;
+}
+
+.margin-50 {
+    margin: 50px;
 }
