Functions on Simon Game

--- a/22_05_16-Simon Game Challenge Starting Files/styles.css
+++ b/22_05_16-Simon Game Challenge Starting Files/styles.css
@@ -1,3 +1,5 @@
+/*
+//**_______________________________________________________________________________________________________________________________________________*/
 body {
   text-align: center;
   background-color: #011F3F;
